ko/mysql-8.4/0.0.4/rust-sdk.mdx
---
title: "Rust로 확장 구축하기"
description: "VillageSQL Rust SDK를 사용하여 안전한 Rust로 확장을 작성하고, VEB 파일로 패키지화한 후 VillageSQL에 설치하는 방법을 알아보세요."
---

<Warning>
Rust SDK는 버전 0.1.0이며 아직 crates.io에 게시되지 않았습니다. 시작하려면 SDK 리포지토리의 로컬 클론과 `Cargo.toml`의 `path` 종속성이 필요합니다.
</Warning>

<Note>
C++를 선호하는 경우 [확장 만들기](/mysql-8.4/0.0.4/create)에서 C++ SDK 워크스테이프를 참조하세요.
</Note>

VillageSQL 확장은 `vsql` 크레이트를 사용하여 Rust로 작성할 수 있습니다. SDK는 모든 FFI 매싱을 처리합니다 — 서버가 로드 시 호출하는 C 엔트리 포인트는 `extension!` 매크로가 생성합니다.

## 사전 요구 사항

다음이 필요합니다:

- **Rust 안정 도구 체인** — [rustup.rs](https://rustup.rs)에서 설치
- **cargo-vsql** — 확장 패키지화, 설치, 테스트를 위한 Cargo 하위 명령어
- **VillageSQL 빌드 디렉터리** — `cargo vsql install` 및 `cargo vsql test`를 위해 `VillageSQL_BUILD_DIR`을 서버 빌드 경로로 설정

SDK 리포지토리에서 `cargo-vsql`을 설치합니다:

```bash
git clone https://github.com/villagesql/vsql-rust-sdk
cd vsql-rust-sdk
cargo install --path cargo-vsql
```

사용 가능 여부를 확인합니다:

```bash
cargo vsql --help
```

## 새 크레이트 생성

새로운 Rust 라이브러리 크레이트를 만듭니다:

```bash
cargo new --lib vsql_rot13
cd vsql_rot13
```

`Cargo.toml`을 편집하여 크레이트 유형을 설정하고 `vsql` 종속성을 추가합니다:

```toml
[package]
name = "vsql_rot13"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
vsql = { path = "/path/to/vsql-rust-sdk/vsql" }
```

`cdylib` 크레이트 유형은 Cargo에게 공유 라이브러리(리눅스에서는 `.so`, 맥OS에서는 `.dylib`)를 생성하도록 지시합니다.

경로 종속성 대신 Git 종속성을 선호하는 경우 다음과 같이 사용할 수 있습니다:

```toml
vsql = { git = "https://github.com/villagesql/vsql-rust-sdk" }
```

이것은 기본 브랜치의 최신 커밋에 고정합니다. 특정 커밋에 고정하려면 `rev = ".."`를 사용합니다.

## 첫 번째 함수 작성

`src/lib.rs`를 완전한 확장으로 대체합니다:

```rust
use vsql::{InValue, VdfReturn};

fn rot13_impl(args: &[InValue]) -> VdfReturn {
    match args.first() {
        Some(InValue::String(s)) => VdfReturn::string(rot13(s)),
        Some(InValue::Null) | None => VdfReturn::null(),
        _ => VdfReturn::error("vsql_rot13: expected a STRING argument"),
    }
}

fn rot13(s: &str) -> String {
    s.chars()
        .map(|c| match c {
            'a'..='m' | 'A'..='M' => (c as u8 + 13) as char,
            'n'..='z' | 'N'..='Z' => (c as u8 - 13) as char,
            _ => c,
        })
        .collect()
}

vsql::extension! {
    funcs: [
        vsql::func!(rot13_impl, "vsql_rot13", [vsql::Type::String] -> vsql::Type::String),
    ]
}
```

`func!` 매크로는 `rot13_impl`을 SQL 이름 `vsql_rot13`과 `STRING -> STRING` 서명으로 연결합니다.

함수 서명은 `fn(&[InValue]) -> VdfReturn`입니다. `InValue`는 서버가 전달하는 SQL 타입의 열거형입니다. `VdfReturn`은 반환하는 값입니다. 값을 수정하기 전에 `args.first()`를 확인하여 NULL 경우와 잘못된 타입 경우를 처리하세요.

함수가 동일한 입력에 대해 항상 동일한 출력을 반환한다면 결정적(deterministic)으로 선언하세요 — 최적화기는 동일한 입력에 대한 결과를 캐시할 수 있습니다:

```rust
vsql::func!(rot13_impl, "vsql_rot13", [vsql::Type::String] -> vsql::Type::String, deterministic: true)
```

## manifest.json 추가

크레이트 루트(여기서 `Cargo.toml`과 함께)에 `manifest.json`을 생성합니다:

```json
{
  "name": "vsql_rot13",
  "version": "0.1.0",
  "description": "ROT-13 encoding for VillageSQL",
  "author": "Your Name",
  "license": "GPL-2.0"
}
```

서버는 설치 시 이 파일을 읽습니다. `name` 필드는 `INSTALL EXTENSION`에 전달하는 값과 일치해야 합니다.

## 빌드 및 설치

<Note>
`cargo vsql package`, `cargo vsql install`, `cargo vsql test` 명령을 확장 디렉터리 내에서 실행합니다(여기서 `Cargo.toml`과 `manifest.json`이 위치함), 워크스페이스 루트가 아닌 곳에서 실행합니다.
</Note>

확장을 `.veb` 파일로 패키지화합니다:

```bash
cargo vsql package
```

이로 인해 `dist/vsql_rot13.veb`가 생성됩니다. VEB를 직접 VillageSQL 빌드 디렉터리로 패키지화하고 복사하려면:

```bash
export VillageSQL_BUILD_DIR=/path/to/villagesql/build
cargo vsql install
```

VEB가 확장 디렉터리로 복사된 것을 확인할 수 있습니다. 존재하는지 확인합니다:

```bash
ls "$VillageSQL_BUILD_DIR/veb_output_directory/"
# vsql_rot13.veb
```

## 테스트

`mysql-test/t/rot13_basic.test`에 테스트 파일을 작성합니다:

```sql
INSTALL EXTENSION 'vsql_rot13';
SELECT vsql_rot13('Hello');
SELECT vsql_rot13('');
SELECT vsql_rot13(NULL);
UNINSTALL EXTENSION 'vsql_rot13';
```

예상 결과를 생성합니다:

```bash
cargo vsql test --record
```

세트를 실행합니다:

```bash
cargo vsql test
```

함수의 동작을 수정한 후, 예상 결과를 업데이트하기 위해 `cargo vsql test --record`를 다시 실행하고, 확인하기 위해 `cargo vsql test`를 실행합니다.

## SQL에 설치

VEB가 확장 디렉터리에 있으면 설치합니다:

```sql
INSTALL EXTENSION 'vsql_rot13';
```

확인합니다:

```sql
SELECT * FROM INFORMATION_SCHEMA.EXTENSIONS WHERE EXTENSION_NAME = 'vsql_rot13';
```

호출합니다:

```sql
SELECT vsql_rot13('Hello, World!');
-- → Uryyb, Jbeyq!
```

## 다음 단계

<CardGroup cols={2}>
  <Card
    title="Rust에서 사용자 정의 타입"
    icon="shapes"
    href="/mysql-8.4/0.0.4/rust-custom-types"
  >
    이진 저장, 정렬, 해싱을 갖는 새 컬럼 타입 정의.
  </Card>
  <Card
    title="Rust API 참조"
    icon="book"
    href="/mysql-8.4/0.0.4/rust-api-reference"
  >
    InValue, VdfReturn, extension!, func!, custom_type! — 모든 필드.
  </Card>
  <Card
    title="C++ SDK (확장 만들기)"
    icon="code"
    href="/mysql-8.4/0.0.4/create"
  >
    C++ 경로 — 타입화된 래퍼, 빌더 API, CMake 설정.
  </Card>
  <Card
    title="확장 아키텍처"
    icon="sitemap"
    href="/mysql-8.4/0.0.4/architecture"
  >
    VEB 파일 로드, 라이프사이클 훅, 심볼 격리.
  </Card>
</CardGroup>